--- a/Sonar_Binary_Classification.ipynb
+++ b/Sonar_Binary_Classification.ipynb
@@ -21,7 +21,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#**Binary Classification Sonar Project 1 for the Navy: Mines vs. Rocks** | Aashir arain\n"
+        "#**Binary Classification Sonar Project 1 for the Navy: Mines vs. Rocks** | Nafees Ur Rehman\n"
       ]
     },
     {
