--- a/Handwritten_Digits_Example.ipynb
+++ b/Handwritten_Digits_Example.ipynb
@@ -21,7 +21,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# **Aashir Arain | Analysing Handwritten Digits Using Keras and Tensorflow **"
+        "# **Nafees Ur Rehman | Analysing Handwritten Digits Using Keras and Tensorflow **"
       ]
     },
     {
